alinhamento vertical e setup desafio011

--- a/modulo-03/ex022/fundo006.html
+++ b/modulo-03/ex022/fundo006.html
@@ -5,13 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundo 6</title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        body {
+            height: 100vh;
+
+            /* Short Hand Background: color image position repeat attachment */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
+
+        }
         main {
-            background-color: rgba(221, 24, 24, 0.308);
-            max-width: 1000px;
+            background-color: rgb(255, 255, 255);
+            max-width: 600px;
             padding: 20px;
             
-            margin-left: 20px;
-            margin-right: 20px;
             margin: auto;
             border-radius: 20px;
         }
@@ -20,6 +31,15 @@
 <body>
     <main>
         <h1>Testes com Fundo</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt, fugit minus eveniet itaque quia voluptas dolor odit sunt reprehenderit ea! Magnam excepturi voluptate ut consequuntur facere laboriosam aspernatur deserunt a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore debitis mollitia, voluptatibus distinctio unde accusamus voluptatum vitae minus a ullam, quia, consequatur natus harum error. Doloribus id quia ratione numquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga corrupti pariatur expedita hic quos recusandae cum esse suscipit fugiat. Accusamus tenetur fuga ratione consequatur soluta repudiandae porro eos a quasi.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt, fugit minus eveniet itaque quia voluptas dolor odit sunt reprehenderit ea! Magnam excepturi voluptate ut consequuntur facere laboriosam aspernatur deserunt a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore debitis mollitia, voluptatibus distinctio unde accusamus voluptatum vitae minus a ullam, quia, consequatur natus harum error. Doloribus id quia ratione numquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga corrupti pariatur expedita hic quos recusandae cum esse suscipit fugiat. Accusamus tenetur fuga ratione consequatur soluta repudiandae porro eos a quasi.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt, fugit minus eveniet itaque quia voluptas dolor odit sunt reprehenderit ea! Magnam excepturi voluptate ut consequuntur facere laboriosam aspernatur deserunt a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore debitis mollitia, voluptatibus distinctio unde accusamus voluptatum vitae minus a ullam, quia, consequatur natus harum error. Doloribus id quia ratione numquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga corrupti pariatur expedita hic quos recusandae cum esse suscipit fugiat. Accusamus tenetur fuga ratione consequatur soluta repudiandae porro eos a quasi.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt, fugit minus eveniet itaque quia voluptas dolor odit sunt reprehenderit ea! Magnam excepturi voluptate ut consequuntur facere laboriosam aspernatur deserunt a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore debitis mollitia, voluptatibus distinctio unde accusamus voluptatum vitae minus a ullam, quia, consequatur natus harum error. Doloribus id quia ratione numquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga corrupti pariatur expedita hic quos recusandae cum esse suscipit fugiat. Accusamus tenetur fuga ratione consequatur soluta repudiandae porro eos a quasi.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt, fugit minus eveniet itaque quia voluptas dolor odit sunt reprehenderit ea! Magnam excepturi voluptate ut consequuntur facere laboriosam aspernatur deserunt a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore debitis mollitia, voluptatibus distinctio unde accusamus voluptatum vitae minus a ullam, quia, consequatur natus harum error. Doloribus id quia ratione numquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga corrupti pariatur expedita hic quos recusandae cum esse suscipit fugiat. Accusamus tenetur fuga ratione consequatur soluta repudiandae porro eos a quasi.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt, fugit minus eveniet itaque quia voluptas dolor odit sunt reprehenderit ea! Magnam excepturi voluptate ut consequuntur facere laboriosam aspernatur deserunt a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore debitis mollitia, voluptatibus distinctio unde accusamus voluptatum vitae minus a ullam, quia, consequatur natus harum error. Doloribus id quia ratione numquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga corrupti pariatur expedita hic quos recusandae cum esse suscipit fugiat. Accusamus tenetur fuga ratione consequatur soluta repudiandae porro eos a quasi.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt, fugit minus eveniet itaque quia voluptas dolor odit sunt reprehenderit ea! Magnam excepturi voluptate ut consequuntur facere laboriosam aspernatur deserunt a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore debitis mollitia, voluptatibus distinctio unde accusamus voluptatum vitae minus a ullam, quia, consequatur natus harum error. Doloribus id quia ratione numquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga corrupti pariatur expedita hic quos recusandae cum esse suscipit fugiat. Accusamus tenetur fuga ratione consequatur soluta repudiandae porro eos a quasi.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt, fugit minus eveniet itaque quia voluptas dolor odit sunt reprehenderit ea! Magnam excepturi voluptate ut consequuntur facere laboriosam aspernatur deserunt a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore debitis mollitia, voluptatibus distinctio unde accusamus voluptatum vitae minus a ullam, quia, consequatur natus harum error. Doloribus id quia ratione numquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga corrupti pariatur expedita hic quos recusandae cum esse suscipit fugiat. Accusamus tenetur fuga ratione consequatur soluta repudiandae porro eos a quasi.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt, fugit minus eveniet itaque quia voluptas dolor odit sunt reprehenderit ea! Magnam excepturi voluptate ut consequuntur facere laboriosam aspernatur deserunt a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore debitis mollitia, voluptatibus distinctio unde accusamus voluptatum vitae minus a ullam, quia, consequatur natus harum error. Doloribus id quia ratione numquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga corrupti pariatur expedita hic quos recusandae cum esse suscipit fugiat. Accusamus tenetur fuga ratione consequatur soluta repudiandae porro eos a quasi.</p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt, fugit minus eveniet itaque quia voluptas dolor odit sunt reprehenderit ea! Magnam excepturi voluptate ut consequuntur facere laboriosam aspernatur deserunt a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore debitis mollitia, voluptatibus distinctio unde accusamus voluptatum vitae minus a ullam, quia, consequatur natus harum error. Doloribus id quia ratione numquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga corrupti pariatur expedita hic quos recusandae cum esse suscipit fugiat. Accusamus tenetur fuga ratione consequatur soluta repudiandae porro eos a quasi.</p>
     </main>
 </body>
