--- a/modulo-03/desafios/table2/index.html
+++ b/modulo-03/desafios/table2/index.html
@@ -9,13 +9,18 @@
 
         body {
             font-family: 'Lexend', Arial, Helvetica, sans-serif;
+            background-image: url('imgs/argentina-4248156_1280.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
         }
         .responsive {
+            margin: 10px 0px;
             overflow-x: auto;
             border-radius: 10px 10px;
             
         }
         table {
+            
             margin: auto;
             width: 70%;
             border-collapse: collapse;
@@ -48,6 +53,7 @@
             color: rgba(0, 0, 0, 0.76);
         }
         table tbody td {
+            background-color: white;
             font-weight: 450;
         }
     </style>
