--- a/modulo-04/ex025/form004.html
+++ b/modulo-04/ex025/form004.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +8,11 @@
 <body>
     <form action="seila.php">
         <label for="iemail">Email</label>
-        <input type="email" name="email" id="iemail">
+        <input type="email" name="email" id="iemail" required>
 
-        <input type="submit" value="Enviar">
+        <label for="itel">Telefone</label>
+        <input type="tel" name="tel" id="itel" required>
+        <input type="submit" value="Enviar"> 
     </form>
 </body>
 </html>
